<resources>
    <string name="app_name">My Collections</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="agregarcoleccion">Create Collection</string>
    <string name="title_activity_collection_main">Collection_main</string>
    <string name="nombre">Name</string>
    <string name="fecha">Date</string>
    <string name="agregarimagen">Upload image</string>
    <string name="guardarcoleccion">Save Collection</string>
    <string name="editar">Edit</string>
    <string name="title_activity_listado_figuras">List of Figures</string>
    <string name="coleccion">Collection: </string>
    <string name="agregarfigura">Insert</string>
    <string name="title_activity_agregar_figura">Up Figura</string>
    <string name="fechacompra">Date buy</string>
    <string name="preciocompra">Buy</string>
    <string name="precioventa">Sale buy</string>
    <string name="imagenes">Image</string>
    <string name="confirmaventa">Is sale?</string>
    <string name="guardarfigura">Save</string>
</resources>
