<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thelastmonkey.mycollections.AgregarFigura"
    tools:showIn="@layout/agregar_figura">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25dp"
            android:text="@string/coleccion"
            android:id="@+id/txtNombreCollectionAgregarFiguraTitulo" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nombre"
            android:id="@+id/txtNombreAgregarFigura"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNombreAgregarFigura" />
            </TableRow>
            <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fechacompra"
            android:id="@+id/txtFechaCompraAgregarFigura"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editTextFechaCompraAgregarFigura" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/preciocompra"
                    android:id="@+id/txtPrecioCompra"
                    android:layout_marginTop="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextPrecioCompra" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/precioventa"
                    android:id="@+id/txtPrecioVenat"
                    android:layout_marginTop="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextPrecioVenta" />
            </TableRow>
        </TableLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmaventa"
            android:id="@+id/checkBoxConfirmaVenta"
            android:layout_marginTop="25dp"
            android:textSize="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/imagenes"
            android:id="@+id/txtImagenes"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/imageViewUno"
                android:src="@drawable/ic_menu_gallery"/>

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/imageViewDos"
                android:src="@drawable/ic_menu_gallery" />

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/imageViewTres"
                android:src="@drawable/ic_menu_gallery"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAgregarFigura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardarfigura"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</RelativeLayout>
