<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLAyout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thelastmonkey.mycollections.Collection_main"
    tools:showIn="@layout/activity_collection_main"
    android:orientation="vertical">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nombre"
        android:id="@+id/textViewNombreCollection" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNombreCollection" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fecha"
        android:id="@+id/textViewFechaCollection" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFechaCollection" />

    <Button
        android:id="@+id/btnAgregarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/agregarimagen"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        android:id="@+id/imageViewCollectionNuevo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guardarcoleccion"
        android:id="@+id/btnGuardarColeccion" />
</LinearLayout>
