<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thelastmonkey.mycollections.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTituloMain"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerCollections"
        android:layout_marginTop="20dp"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <ImageView
        android:id="@+id/imageViewCollection"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <TextView
        android:id="@+id/lblMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEditar"
            android:text="@string/editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAgregarColeccion"
            android:text="@string/agregarcoleccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtIdCollection" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtNombreCollection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtPathImagen" />
    </LinearLayout>

</LinearLayout>
